--- a/wcs/index.html
+++ b/wcs/index.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Svelte + TS</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <wc-svelte-todo></wc-svelte-todo>
-    <svelte-wcs name="Austin"></svelte-wcs>
-    <script type="module" src="/src/svelte/main.ts"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vite + Svelte + TS</title>
+  <script defer src="https://unpkg.com/rxjs@^7/dist/bundles/rxjs.umd.min.js"></script>
+  <script type="importmap">
+    {
+			"imports": {
+				"lit": "https://cdn.jsdelivr.net/gh/lit/dist@2/core/lit-core.min.js",
+				"lit/": "https://cdn.jsdelivr.net/npm/lit@2.7.0/",
+				"@lit/reactive-element/decorators/": "https://cdn.jsdelivr.net/npm/@lit/reactive-element@1.6.1/decorators/",
+				"rxjs": "https://unpkg.com/rxjs@7.8.0/dist/bundles/rxjs.umd.min.js"
+			}
+		}
+	</script>
+</head>
+
+<body>
+  <div id="app"></div>
+  <wc-svelte-todo></wc-svelte-todo>
+  <svelte-wcs name="Austin"></svelte-wcs>
+  <script type="module" src="/src/svelte/main.ts"></script>
+</body>
+
 </html>
